[metadata]
name = ply
version = 2022.10.27
url = https://github.com/dabeaz/ply
author = David Beazley
author_email = "David Beazley" <dave@dabeaz.com>
description = "PLY - Sly Lex Yacc"
long_description = "PLY is an implementation of lex and yacc. No longer maintained on PyPI. Latest version on GitHub."
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src

packages = ply
